--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ Your browser does not support the audio element.
 <br>
 <br>
 <audio controls autoplay muted>
-  <source src="Kairos.mp3">
+  <source src="Kairos.mp3?raw=true">
 Your browser does not support the audio element.
 </audio>
 <br>
