--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@ Your browser does not support the audio element.
 <br>
 <br>
 <audio controls autoplay muted>
+  <iframe src="Kairos.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe>
   <source src="Kairos.mp3?raw=true">
 Your browser does not support the audio element.
 </audio>
