--- a/index.html
+++ b/index.html
@@ -24,34 +24,34 @@ Spatial sound workshop with Ji Youn Kang</p>
 <small>_geophone</small> 
 <br>
 <audio controls autoplay muted>
-  <source src="/Users/ez/Library/Mobile Documents/com~apple~CloudDocs/html/geophone.wav" type="audio/wav">
+  <iframe src="geophone.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe>
 Your browser does not support the audio element.
 </audio>
 <br>
 <small>_hydrophone</small> 
 <br>
 <audio controls autoplay muted>
-  <source src="/Users/ez/Library/Mobile Documents/com~apple~CloudDocs/html/hydrophone.wav" type="audio/wav">
+  <iframe src="hydrophone.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe>
 Your browser does not support the audio element.
 </audio>
 <br>
 <small>_lavalier</small> 
 <br> 
 <audio controls autoplay muted>
-  <source src="/Users/ez/Library/Mobile Documents/com~apple~CloudDocs/html/lavalier.wav" type="audio/wav">
+  <iframe src="lavalier2" allow="autoplay" style="display:none" id="iframeAudio"></iframe>
 Your browser does not support the audio element.
 </audio>
 <br>
 <small>_binaural</small> 
 <br>
 <audio controls autoplay muted>
-  <source src="/Users/ez/Library/Mobile Documents/com~apple~CloudDocs/html/binaural.wav" type="audio/wav">
+  <iframe src="binaural" allow="autoplay" style="display:none" id="iframeAudio"></iframe>
 Your browser does not support the audio element.
 </audio>
 <br>
 <br>
 <br>
-<img src="/Users/ez/Library/Mobile Documents/com~apple~CloudDocs/html/Voronoi diagram 2.png" alt="Voronoi diagram"style="width:180px;height:180px;"><br>
+<img src="Voronoi diagram 2.png" alt="Voronoi diagram"style="width:180px;height:180px;"><br>
 <small>_<i>voronoi diagram</i></small> 
 <br>
 <br>
@@ -73,7 +73,6 @@ Your browser does not support the audio element.
 <br>
 <audio controls autoplay muted>
   <iframe src="Kairos.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe>
-  <source src="Kairos.mp3?raw=true">
 Your browser does not support the audio element.
 </audio>
 <br>
@@ -83,7 +82,7 @@ Your browser does not support the audio element.
 <br>
 <br>
 <audio controls autoplay muted>
-  <source src="/Users/ez/Library/Mobile Documents/com~apple~CloudDocs/html/Floating basin.wav">
+  <iframe src="Floating basin.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe>
 Your browser does not support the audio element.
 </audio>
 <br>
@@ -94,7 +93,6 @@ Your browser does not support the audio element.
   <source src="/Users/ez/Library/Mobile Documents/com~apple~CloudDocs/html/Returning to zero time.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video><br>
-<img src="/Users/ez/Library/Mobile Documents/com~apple~CloudDocs/html/IMG_2661.jpg" alt="Returning to zero time"style="width:600px;height:800px;"><br>
 <br>
 <br>
 
