--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@ Your browser does not support the audio element.
 <small>_lavalier</small> 
 <br> 
 <audio controls autoplay muted>
-  <iframe src="lavalier2" allow="autoplay" style="display:none" id="iframeAudio"></iframe>
+  <iframe src="lavalier2.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe>
 Your browser does not support the audio element.
 </audio>
 <br>
 <small>_binaural</small> 
 <br>
 <audio controls autoplay muted>
-  <iframe src="binaural" allow="autoplay" style="display:none" id="iframeAudio"></iframe>
+  <iframe src="binaural.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe>
 Your browser does not support the audio element.
 </audio>
 <br>
