--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@ Spatial sound workshop with Ji Youn Kang</p>
 <br>
 <audio controls autoplay muted>
   <iframe src="geophone.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe>
-  <iframe src="geophone.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe>
 Your browser does not support the audio element.
 </audio>
 <br>
@@ -64,6 +63,7 @@ Your browser does not support the audio element.
 <br>
 <audio controls autoplay muted>
   <source src="/Users/ez/Library/Mobile Documents/com~apple~CloudDocs/html/Corpus ii.wav" type="audio/wav">
+  <source src="/Users/ez/Library/Mobile Documents/com~apple~CloudDocs/html/Corpus ii.wav" type="audio/wav">
 Your browser does not support the audio element.
 </audio>
 <br>
@@ -92,7 +92,7 @@ Your browser does not support the audio element.
 <small>2020_<b>Returning to zero time</b>_an immersive biofeedback environment was installed for the Reeperbahn Festival, Hamburg (DE). Taking the anatomic womb as inspiration, audio and visual impulses are tuned to the average heart rate of visitors, as an investigation on the social experience of synchronisation. Commissioned for the artist collective Frank Nubala.</small><br> 
 <video width="600" height="400" controls>
   <source src="/Users/ez/Library/Mobile Documents/com~apple~CloudDocs/html/Returning to zero time.mp4" type="video/mp4">
-  <iframe src="https://drive.google.com/file/d/12k2PeHOOaKrST03tNs3he1sojgRF8d3m/view?usp=sharing" id="app"  width="600px" height="800px" frameborder="0" scrolling="no"></iframe>
+  <iframe src="https://www.youtube.com/watch?v=tU8yBeNGGE0" id="app"  width="600px" height="800px" frameborder="0" scrolling="no"></iframe>
 Your browser does not support the video tag.
 </video><br>
 <br>
