--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@ Spatial sound workshop with Ji Youn Kang</p>
 <br>
 <audio controls autoplay muted>
   <iframe src="geophone.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe>
+  function myFunction() {
+  var iframe = document.getElementById("iframe1");
+  var elmnt = iframe.contentWindow.document.getElementById("btn").click()
+}
 Your browser does not support the audio element.
 </audio>
 <br>
