--- a/index.html
+++ b/index.html
@@ -24,11 +24,8 @@ Spatial sound workshop with Ji Youn Kang</p>
 <small>_geophone</small> 
 <br>
 <audio controls autoplay muted>
-  <iframe src="geophone.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe>
-  function myFunction() {
-  var iframe = document.getElementById("iframe1");
-  var elmnt = iframe.contentWindow.document.getElementById("btn").click()
-}
+  <p><a href="geophone.mp3" target="iframe_a">_geophone</a></p>
+    <iframe_a src="geophone.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe_a>
 Your browser does not support the audio element.
 </audio>
 <br>
