--- a/index.html
+++ b/index.html
@@ -24,8 +24,15 @@ Spatial sound workshop with Ji Youn Kang</p>
 <small>_geophone</small> 
 <br>
 <audio controls autoplay muted>
-  <p><a href="geophone.mp3" target="iframe_a">_geophone</a></p>
+  <source src="/Users/ez/Library/Mobile Documents/com~apple~CloudDocs/html/geophone.wav" type="audio/wav">
     <iframe_a src="geophone.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe_a>
+  <figure>
+  <figcaption>_geophone</figcaption>
+  <audio controls src="geophone.mp3">
+    <a href="geophone.mp3"> Download audio </a>
+  </audio>
+</figure>
+
 Your browser does not support the audio element.
 </audio>
 <br>
