--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Spatial sound workshop with Ji Youn Kang</p>
 <small>_geophone</small> 
 <br>
 <audio controls autoplay muted>
-  <source src="/Users/ez/Library/Mobile Documents/com~apple~CloudDocs/html/geophone.wav" type="audio/wav">
+  <source src="geophone.mp3" type="audio/mp3">
     <iframe_a src="geophone.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe_a>
   <figure>
   <figcaption>_geophone</figcaption>
