--- a/index.html
+++ b/index.html
@@ -29,14 +29,17 @@ Spatial sound workshop with Ji Youn Kang</p>
     <a href="geophone.mp3"> Download audio </a>
   </audio>
 </figure>
-
 Your browser does not support the audio element.
 </audio>
 <br>
 <small>_hydrophone</small> 
 <br>
-<audio controls autoplay muted>
-  <iframe src="hydrophone.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe>
+  <figure>
+  <figcaption>_hydrophone</figcaption>
+  <audio controls src="hydrophone.mp3">
+    <a href="hydrophone.mp3"> Download audio </a>
+  </audio>
+</figure>
 Your browser does not support the audio element.
 </audio>
 <br>
