--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Spatial sound workshop with Ji Youn Kang</p>
 <br>
   <figure>
   <audio controls src="geophone.mp3">
-    <a href="geophone.mp3"> Download audio </a>
+    <a href="geophone.mp3"></a>
   </audio>
 </figure>
 </audio>
@@ -33,12 +33,10 @@ Spatial sound workshop with Ji Youn Kang</p>
 <small>_hydrophone</small> 
 <br>
   <figure>
-  <figcaption>_hydrophone</figcaption>
   <audio controls src="hydrophone.mp3">
-    <a href="hydrophone.mp3"> Download audio </a>
+    <a href="hydrophone.mp3"></a>
   </audio>
 </figure>
-Your browser does not support the audio element.
 </audio>
 <br>
 <small>_lavalier</small> 
