--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@ Spatial sound workshop with Ji Youn Kang</p>
     <a href="geophone.mp3"></a>
   </audio>
 </figure>
-</audio>
 <br>
 <small>_hydrophone</small> 
 <br>
@@ -37,14 +36,14 @@ Spatial sound workshop with Ji Youn Kang</p>
     <a href="hydrophone.mp3"></a>
   </audio>
 </figure>
-</audio>
 <br>
 <small>_lavalier</small> 
 <br> 
-<audio controls autoplay muted>
-  <iframe src="lavalier2.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe>
-Your browser does not support the audio element.
-</audio>
+ <figure>
+  <audio controls src="lavalier2.mp3">
+    <a href="lavalier2.mp3"></a>
+  </audio>
+</figure>
 <br>
 <small>_binaural</small> 
 <br>
