--- a/index.html
+++ b/index.html
@@ -47,10 +47,11 @@ Spatial sound workshop with Ji Youn Kang</p>
 <br>
 <small>_binaural</small> 
 <br>
-<audio controls autoplay muted>
-  <iframe src="binaural.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe>
-Your browser does not support the audio element.
-</audio>
+  <figure>
+  <audio controls src="binaural.mp3">
+    <a href="binaural.mp3"></a>
+  </audio>
+</figure>
 <br>
 <br>
 <br>
