--- a/index.html
+++ b/index.html
@@ -76,20 +76,22 @@ Your browser does not support the audio element.
 <small>2022_<b>Kairos</b>_is a sound collage commissioned for Refuge Radio Berlin as a part of Alifiyah Imani's artistic research on Sonic Rituals. The piece constructs sonic clusters of events that happened in 2022 as an interpretation of kairos, or non-linear time, and how memories take on the retrospective marker of time. </small> 
 <br>
 <br>
-<audio controls autoplay muted>
-  <iframe src="https://drive.google.com/file/d/1h_Et_36q_nzLPx4K_Q3PZhGGFf_DlZtc/view?usp=sharing" allow="autoplay" style="display:none" id="iframeAudio"></iframe>
-Your browser does not support the audio element.
-</audio>
+<figure>
+  <audio controls src="Kairos.mp3">
+    <a href="Kairos.mp3"></a>
+  </audio>
+</figure>
 <br>
 <br>
 <br>
 <small>2022_<b>Floating Basin</b>_is a part of a cumulative work broadcasted on Cashmere Radio Berlin as a result of the Diasporic Listening workshop with sound artist Yara Mekawai. The piece takes a recording of the basin at Floating <s>University</s> as a departure point to question the meaning of change.</small> 
 <br>
 <br>
-<audio controls autoplay muted>
-  <iframe src="Floating basin.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe>
-Your browser does not support the audio element.
-</audio>
+<figure>
+  <audio controls src="Floating basin.mp3">
+    <a href="Floating basin.mp3"></a>
+  </audio>
+</figure>
 <br>
 <br>
 <br>
