--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@ Spatial sound workshop with Ji Youn Kang</p>
 <br>
 <small>_ii.30.3.2023_schwarzhaus</small> 
 <br>
-<audio controls autoplay muted>
-  <source src="/Users/ez/Library/Mobile Documents/com~apple~CloudDocs/html/Corpus ii.wav" type="audio/wav">
-  <source src="/Users/ez/Library/Mobile Documents/com~apple~CloudDocs/html/Corpus ii.wav" type="audio/wav">
-Your browser does not support the audio element.
-</audio>
+ <figure>
+  <audio controls src="Corpus_ii.mp3">
+    <a href="Corpus_ii.mp3"></a>
+  </audio>
+</figure>
 <br>
 <br>
 <br>
