--- a/index.html
+++ b/index.html
@@ -97,11 +97,8 @@ Spatial sound workshop with Ji Youn Kang</p>
 <br>
 <small>2020_<b>Returning to zero time</b>_an immersive biofeedback environment was installed for the Reeperbahn Festival, Hamburg (DE). Taking the anatomic womb as inspiration, audio and visual impulses are tuned to the average heart rate of visitors, as an investigation on the social experience of synchronisation. Commissioned for the artist collective Frank Nubala.</small><br> 
 <video width="600" height="400" controls>
-  <source src="/Users/ez/Library/Mobile Documents/com~apple~CloudDocs/html/Returning to zero time.mp4" type="video/mp4">
-  <iframe src="https://www.youtube.com/watch?v=tU8yBeNGGE0" id="app"  width="600px" height="800px" frameborder="0" scrolling="no"></iframe>
-Your browser does not support the video tag.
-</video><br>
-<br>
-<br>
-
+<div class="flex-video">
+<video src="Returning to zero time.mp4" autoplay controls loop>
+</video>
+</div>
 
