--- a/index.html
+++ b/index.html
@@ -101,4 +101,9 @@ Spatial sound workshop with Ji Youn Kang</p>
 <video src="Returning to zero time.mp4" autoplay controls loop>
 </video>
 </div>
-
+<video src="Returning to zero time.mp4" controls>
+  <p>
+    Your browser doesn't support HTML video. Here is a
+    <a href="Returning to zero time.mp4">link to the video</a> instead.
+  </p>
+</video>
