--- a/index.html
+++ b/index.html
@@ -101,9 +101,7 @@ Spatial sound workshop with Ji Youn Kang</p>
 <video src="Returning to zero time.mp4" autoplay controls loop>
 </video>
 </div>
-<video src="Returning to zero time.mp4" controls>
-  <p>
-    Your browser doesn't support HTML video. Here is a
-    <a href="Returning to zero time.mp4">link to the video</a> instead.
-  </p>
+<br>
+<video controls>
+  <source src="Returning to zero time.mp4" type="video/mp4">
 </video>
