--- a/index.html
+++ b/index.html
@@ -97,11 +97,7 @@ Spatial sound workshop with Ji Youn Kang</p>
 <br>
 <small>2020_<b>Returning to zero time</b>_an immersive biofeedback environment was installed for the Reeperbahn Festival, Hamburg (DE). Taking the anatomic womb as inspiration, audio and visual impulses are tuned to the average heart rate of visitors, as an investigation on the social experience of synchronisation. Commissioned for the artist collective Frank Nubala.</small><br> 
 <br>
-<div class="flex-video">
-<video src="Returning to zero time.mp4" autoplay controls loop>
-</video>
-</div>
-<br>
-<video controls>
+<video width="600" height="400" controls>
   <source src="Returning to zero time.mp4" type="video/mp4">
-</video>
+Your browser does not support the video tag.
+</video><br>
