--- a/index.html
+++ b/index.html
@@ -100,4 +100,6 @@ Spatial sound workshop with Ji Youn Kang</p>
 Your browser does not support the video tag.
 </video><br>
 <br>
-
+<img src="zero time.png" alt="Process Returning to zero time"style="width:600px;height:800px;"><br>
+<small>_<i>process</i></small> 
+<br>
