--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Spatial sound workshop with Ji Youn Kang</p>
   </audio>
 </figure>
 <br>
-<small>_hydrophone</small> 
+<small>_hydrophone with Harry Golden</small> 
 <br>
   <figure>
   <audio controls src="hydrophone.mp3">
