--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <small>// a growing repository of sounds</small>
 <br>
-<small>0o. isul kim</small>
+<small>(@, isul kim</small>
 
 </body>
 </html>
