--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <p style="font-family:courier;color:red;font-size:90%;">Adapted for Institute of Sonology<br>
 Master of Music in Sonology</p>
 <br>
-<img src="zero time.png" alt="Process Returning to zero time"style="width:600px;height:400px;"><br>
+<img src="anatomic buoyancies.jpg" alt="hydrophone"style="width:400px;height:600px;"><br>
 <small>_<i>process</i></small> 
 <br>
 <small>2023_<b>Anatomic Buoyancies</b>_is a collection of work arranged from material collected during Justin Bennett's field-recording workshop (The Hague). The works seek to explore the characteristics of each microphone through the choice of environment<sup>2</sup> they are placed inside. Each microphone embodies a unique shape and size, bandwidth, field of capture, and usability requirements that situates it in unique contexts. The (self-proclaimed) objective was to explore the characteristics of microphones presented to us, through imagining a suitable environment to capture. The following recordings were complied and composed during an excursion through the city, shifting sands, an elevated dinner, and a practise of non-listening. 
