--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<small>// a repository of sounds</small>
+<small>//a repository of sounds</small>
 <br>
 <small>(@, isul kim</small>
 
@@ -14,9 +14,10 @@
 
 <br>
 <p style="font-family:courier;color:red;font-size:90%;">Adapted for Institute of Sonology<br>
-Master of Music in Sonology</p>
+</p>
 <br>
 <img src="anatomic buoyancies.jpg" alt="hydrophone"style="width:200px;height:250px;"><br>
+<small>_<i>the middle ear</i></small> 
 <br>
 <small>2023_<b>Anatomic Buoyancies</b>_is a collection of work arranged from material collected during Justin Bennett's field-recording workshop (The Hague). The works seek to explore the characteristics of each microphone through the choice of environment<sup>2</sup> they are placed inside. Each microphone embodies a unique shape and size, bandwidth, field of capture, and usability requirements that situates it in unique contexts. The (self-proclaimed) objective was to explore the characteristics of microphones presented to us, through imagining a suitable environment to capture. The following recordings were complied and composed during a week's excursion through the city, shifting sands, an elevated dinner, and a practise of non-listening. 
 </small> 
@@ -74,7 +75,7 @@ Master of Music in Sonology</p>
 <br>
 <br>
 <br>
-<small>2022_<b>Kairos</b>_is a sound collage commissioned for Refuge Radio Berlin as a part of Alifiyah Imani's artistic research on Sonic Rituals. The piece constructs sonic clusters of events that happened in 2022 as an interpretation of kairos, or non-linear time, and how memories take on the retrospective marker of time. </small> 
+<small>2022_<b>Kairos</b>_is a sound collage commissioned for Refuge Radio Berlin as a part of Alifiyah Imani's artistic research on Sonic Rituals. The piece constructs sonic clusters of events that happened in 2022 as an interpretation of kairos, or non-linear time, and how memories take on the retrospective marker of time. The composed situations play with the proximities of encounter with the social-political landscape of Berlin. By drawing in major events: the Artemis launch, war on Ukraine, feminist protests in Iran, and how these remembrances entwine with our ordinary soundscapes, it achieves an abstracted journalism or journaling of events from an individual perspective. The audio samples that mark each sonic event was taken from Instagram.</small> 
 <br>
 <br>
 <figure>
@@ -85,7 +86,7 @@ Master of Music in Sonology</p>
 <br>
 <br>
 <br>
-<small>2022_<b>Floating Basin</b>_is a part of a cumulative work broadcasted on Cashmere Radio Berlin as a result of the Diasporic Listening workshop with sound artist Yara Mekawai. The piece takes a recording of the basin at Floating <s>University</s> as a departure point to question the meaning of change.</small> 
+<small>2022_<b>Floating Basin</b>_is a sound essay was broadcasted on Cashmere Radio Berlin as a part of a cumulative work on Diasporic Listening to Berlin soundscapes with artist Yara Mekawei. Floating <s>University</s>, is a public intervention site above the rainwater retention basin of the old Templehofer airport and a urban sanctuary for wildlife and microbials. Inspired by their resistance to uphold against urban development pressures and the societal activation of post-COVID lockdown, the essay situates upon this site as a departure point to question the meaning of change.</small> 
 <br>
 <br>
 <figure>
