--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <br>
 <br>
 <br>
-<small>2022_<b>Floating Basin</b>_is a sound essay was broadcasted on Cashmere Radio Berlin as a part of a cumulative work on Diasporic Listening to Berlin soundscapes with artist Yara Mekawei. Floating <s>University</s>, is a public intervention site above the rainwater retention basin of the old Templehofer airport and a urban sanctuary for wildlife and microbials. Inspired by their resistance to uphold against urban development pressures and the societal activation of post-COVID lockdown, the essay situates upon this site as a departure point to question the meaning of change.</small> 
+<small>2022_<b>Floating Basin</b>_is a sound essay broadcasted on Cashmere Radio as a part of a cumulative work on Diasporic Listening to Berlin soundscapes with artist Yara Mekawei. Floating <s>University</s>, is a public intervention site above the rainwater retention basin of the old Templehofer airport and an urban sanctuary for wildlife and microbials. Inspired by their resistance to uphold against urban redevelopment pressures and the societal activation of post-COVID lockdown, the essay situates upon this site as a departure point to question the meaning of change.</small> 
 <br>
 <br>
 <figure>
@@ -97,7 +97,7 @@
 <br>
 <br>
 <br>
-<small>2020_<b>Returning to zero time</b>_an immersive biofeedback environment was installed for the Reeperbahn Festival, Hamburg (DE). Taking the anatomic womb as inspiration, audio and visual impulses are tuned to the average heart rate of visitors, as an investigation on the social experience of synchronisation. Commissioned for the artist collective Frank Nubala.</small><br> 
+<small>2020_<b>Returning to zero time</b>_an immersive biofeedback environment was installed for the Reeperbahn Festival, in Hamburg Germany. Taking the anatomic womb as inspiration, audio and visual impulses are tuned to the average heart rate of visitors, as an investigation on the social experience of synchronisation during the first COVID lockdown. Commissioned for the artist collective Frank Nubala.</small><br> 
 <video width="600" height="400" controls>
   <source src="Returning to zero time.mp4" type="video/mp4">
 Your browser does not support the video tag.
