--- a/index.html
+++ b/index.html
@@ -56,22 +56,7 @@
 </figure>
 <br>
 <br>
-<br>
-<img src="Voronoi diagram 2.png" alt="Voronoi diagram"style="width:180px;height:180px;"><br>
-<small>_<i>voronoi diagram</i></small> 
-<br>
-<br>
-<br>
-<small>2023_<b>Corpus ii</b>_was a live performance of Corpus i through a 4-channel speaker configuration and three receiver radios; spatialized according to the voronoi principle.</small> 
-<br>
-<br>
-<small>_ii.30.3.2023_schwarzhaus</small> 
-<br>
- <figure>
-  <audio controls src="Corpus_ii.mp3">
-    <a href="Corpus_ii.mp3"></a>
-  </audio>
-</figure>
+<small>2023_<b>Sound of NZ: Mt Manganui</b>_is</small> 
 <br>
 <br>
 <br>
@@ -94,6 +79,14 @@
     <a href="Floating basin.mp3"></a>
   </audio>
 </figure>
+<br>
+<br>
+<br>
+<small>2020_<b>Mobilizing Ocupações</b>_is</small> 
+<br>
+<br>
+<br>
+<small>2020_<b>Absorption as part of Down to Earth</b>_is</small> 
 <br>
 <br>
 <br>
