--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 </figure>
 <br>
 <br>
-<small>2023_<b>Sound of NZ: Mt Manganui</b>_is</small> 
 <br>
+<small>2020_<b>Mobilizing Ocupações</b>_is</small> 
 <br>
 <br>
 <small>2022_<b>Kairos</b>_is a sound collage commissioned for Refuge Radio Berlin as a part of Alifiyah Imani's artistic research on Sonic Rituals. The piece constructs sonic clusters of events that happened in 2022 as an interpretation of kairos, or non-linear time, and how memories take on the retrospective marker of time. The composed situations play with the proximities of encounter with the social-political landscape of Berlin. By drawing in major events: the Artemis launch, war on Ukraine, feminist protests in Iran, and how these remembrances entwine with our ordinary soundscapes, it achieves an abstracted journalism or journaling of events from an individual perspective. The audio samples that mark each sonic event was taken from Instagram.</small> 
@@ -79,6 +79,10 @@
     <a href="Floating basin.mp3"></a>
   </audio>
 </figure>
+<br>
+<br>
+<br>
+<small>2022_<b>Sounds of Mt Manganui</b>_is</small> 
 <br>
 <br>
 <br>
