--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </html>
 
 <br>
+<br>
 <p style="font-family:courier;color:red;font-size:90%;">Adapted for Institute of Sonology<br>
 </p>
 <br>
@@ -20,7 +21,7 @@
 <small>_<i>the middle ear</i></small> 
 <br>
 <br>
-<small>2023_<b>Anatomic Buoyancies</b>_is a collection of work arranged from material collected during Justin Bennett's field-recording workshop (The Hague). The works seek to explore the characteristics of each microphone through the choice of environment<sup>2</sup> they are placed inside. Each microphone embodies a unique shape and size, bandwidth, field of capture, and usability requirements that situates it in unique contexts. The (self-proclaimed) objective was to explore the characteristics of microphones presented to us, through imagining a suitable environment to capture. The following recordings were complied and composed during a week's excursion through the city, shifting sands, an elevated dinner, and a practise of non-listening. 
+<small>2023_<b>Anatomic Buoyancies</b>_is a collection of work arranged from material collected during Justin Bennett's field-recording workshop (The Hague). The works seek to explore the characteristics of each microphone through the choice of environment<sup>2</sup> they are placed inside. Each microphone embodies a unique shape and size, bandwidth, field of capture, and usability requirements that situates it in unique contexts. The (self-proclaimed) objective was to explore the characteristics of microphones presented to us, through imagining a suitable environment to capture. The following recordings were complied and composed during a week's excursion through the city, shifting sands, and a practise of non-listening. (ongoing)
 </small> 
 <br>
 <br>
@@ -40,14 +41,6 @@
   </audio>
 </figure>
 <br>
-<small>_lavalier</small> 
-<br> 
- <figure>
-  <audio controls src="lavalier2.mp3">
-    <a href="lavalier2.mp3"></a>
-  </audio>
-</figure>
-<br>
 <small>_binaural</small> 
 <br>
   <figure>
@@ -58,7 +51,15 @@
 <br>
 <br>
 <br>
-<small>2020_<b>Mobilizing Ocupações</b>_is</small> 
+<small>2023_<b>Slowing walking down a surburban street</b>_is a sonic transformation of the soundscape of a park in surburban New Zealand.</small> 
+<br>
+<br>
+<figure>
+  <audio controls src="slowly walking down a surburban street.mp3">
+    <a href="slowly walking down a surburban street.mp3"></a>
+  </audio>
+</figure>
+<br>
 <br>
 <br>
 <small>2022_<b>Kairos</b>_is a sound collage commissioned for Refuge Radio Berlin as a part of Alifiyah Imani's artistic research on Sonic Rituals. The piece constructs sonic clusters of events that happened in 2022 as an interpretation of kairos, or non-linear time, and how memories take on the retrospective marker of time. The composed situations play with the proximities of encounter with the social-political landscape of Berlin. By drawing in major events: the Artemis launch, war on Ukraine, feminist protests in Iran, and how these remembrances entwine with our ordinary soundscapes, it achieves an abstracted journalism or journaling of events from an individual perspective. The audio samples that mark each sonic event was taken from Instagram.</small> 
@@ -82,8 +83,6 @@
 </figure>
 <br>
 <br>
-<br>
-<small>2022_<b>Sounds of Mt Manganui</b>_is</small> 
 <br>
 <br>
 <br>
