--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <small>_<i>the middle ear</i></small> 
 <br>
 <br>
-<small>2023_<b>Anatomic Buoyancies</b>_is a collection of work arranged from material collected during Justin Bennett's field-recording workshop (The Hague). The works seek to explore the characteristics of each microphone through the choice of environment<sup>2</sup> they are placed inside. Each microphone embodies a unique shape and size, bandwidth, field of capture, and usability requirements that situates it in unique contexts. The (self-proclaimed) objective was to explore the characteristics of microphones presented to us, through imagining a suitable environment to capture. The following recordings were complied and composed during a week's excursion through the city, shifting sands, and a practise of non-listening. (ongoing)
+<small>2023_<b>Anatomic Buoyancies</b>_is a collection of work arranged from material collected during Justin Bennett's field-recording workshop (The Hague). The works seek to explore the characteristics of each microphone through the choice of environment<sup>2</sup> they are placed inside. Each microphone embodies a unique shape and size, bandwidth, field of capture, and usability requirements that situates it in unique contexts. The (self-proclaimed) objective was to explore the characteristics of microphones presented to us, through imagining a suitable environment to capture. The following recordings were complied and composed during a week's excursion through the city, shifting sands, and a practise of non-listening.</small> 
 </small> 
 <br>
 <br>
@@ -51,7 +51,7 @@
 <br>
 <br>
 <br>
-<small>2023_<b>Slowing walking down a surburban street</b>_is a sonic transformation of the soundscape of a park in surburban New Zealand.</small> 
+<small>2023_<b>Slowing walking down a surburban street</b>_is the sonic elaborations on the soundscapes of a park in surburban New Zealand, frequently visited as a kid.</small> 
 <br>
 <br>
 <figure>
