--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <br>
 <br>
 <br>
-<small>2023_<b>Slowing walking down a surburban street</b>_is the sonic elaborations on the soundscapes of a park in surburban New Zealand, frequently visited as a kid.</small> 
+<small>2023_<b>Slowing walking down a surburban street</b>_is a sonic elaboration on the soundscape of a park frequently visited as a kid in surburban New Zealand. The mix-media sound piece utilises field-recordings and synthesis techniques to narrate a sonic context of a site.</small> 
 <br>
 <br>
 <figure>
@@ -62,8 +62,8 @@
 </figure>
 <br>
 <br>
-<img src="kairos.jpg" alt="kairos"style="width:250px;height:200px;"><br>
-<small>_<i>images unclotted</i></small> 
+<img src="kairos.jpg" alt="kairos"style="width:280px;height:210px;"><br>
+<small>_<i>images</i></small> 
 <br>
 <br>
 <small>2022_<b>Kairos</b>_is a sound collage commissioned for Refuge Radio Berlin as a part of Alifiyah Imani's artistic research on Sonic Rituals. The piece constructs sonic clusters of events that happened in 2022 as an interpretation of kairos, or non-linear time, and how memories take on the retrospective marker of time. The composed situations play with the proximities of encounter with the social-political landscape of Berlin. By drawing in major events: the Artemis launch, war on Ukraine, feminist protests in Iran, and how these remembrances entwine with our ordinary soundscapes, it achieves an abstracted journalism or journaling of events from an individual perspective. The audio samples that mark each sonic event was taken from Instagram.</small> 
@@ -85,14 +85,6 @@
     <a href="Floating basin.mp3"></a>
   </audio>
 </figure>
-<br>
-<br>
-<br>
-<small>2020_<b>Mobilizing Ocupações</b>_is</small> 
-<br>
-<br>
-<br>
-<small>2020_<b>Absorption as part of Down to Earth</b>_is</small> 
 <br>
 <br>
 <br>
