--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <br>
 <br>
-<p style="font-family:courier;color:red;font-size:90%;">Adapted for the Institute of Sonology<br>
-<p style="font-family:courier;color:red;font-size:90%;">Application Master of Music in Sonology<br>
+<p style="font-family:courier;color:red;font-size:90%;">Adapted for the Institute of Sonology
+<p style="font-family:courier;color:red;font-size:90%;">Application: Master of Music in Sonology<br>
 </p>
 <br>
 <img src="anatomic buoyancies.jpg" alt="hydrophone"style="width:200px;height:250px;"><br>
