--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 <br>
 <br>
 <figure>
-  <audio controls src="slowly walking down a surburban street.mp3">
-    <a href="slowly walking down a surburban street.mp3"></a>
+  <audio controls src="slowly walking down a suburban street.mp3">
+    <a href="slowly walking down a suburban street.mp3"></a>
   </audio>
 </figure>
 <br>
