--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <br>
 <br>
-<p style="font-family:courier;color:red;font-size:90%;">Adapted for the Institute of Sonology
+<p style="font-family:courier;color:red;font-size:90%;">Adapted for the Institute of Sonology</p>
 <p style="font-family:courier;color:red;font-size:90%;">Application: Master of Music in Sonology<br>
 </p>
 <br>
