--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <small>_<i>the middle ear</i></small> 
 <br>
 <br>
-<small>2023_<b>Anatomic Buoyancies</b>_is a collection of work arranged from material collected during Justin Bennett's field-recording workshop (The Hague). The works seek to explore the characteristics of each microphone through the choice of environment<sup>2</sup> they are placed inside. Each microphone embodies a unique shape and size, bandwidth, field of capture, and usability requirements that situates it in unique contexts. The (self-proclaimed) objective was to explore the characteristics of microphones presented to us, through imagining a suitable environment to capture. The following recordings were complied and composed during a week's excursion through the city, shifting sands, and a practise of non-listening.</small> 
+<small>2023_<b>Anatomic buoyancies</b>_is a collection of work arranged from material collected during Justin Bennett's field-recording workshop (The Hague). The works seek to explore the characteristics of each microphone through the choice of environment<sup>2</sup> they are placed inside. Each microphone embodies a unique shape and size, bandwidth, field of capture, and usability requirements that situates it in unique contexts. The (self-proclaimed) objective was to explore the characteristics of microphones presented to us, through imagining a suitable environment to capture. The following recordings were complied and composed during a week's excursion through the city, shifting sands, and a practise of non-listening.</small> 
 </small> 
 <br>
 <br>
@@ -52,7 +52,7 @@
 <br>
 <br>
 <br>
-<small>2023_<b>Slowing walking down a surburban street</b>_is a sonic elaboration on the soundscape of a park frequently visited as a kid in surburban New Zealand. The mix-media sound piece utilises field-recordings and synthesis techniques to narrate a sonic context of a site.</small> 
+<small>2023_<b>Slowing walking down a suburban street</b>_is a sonic elaboration on the soundscape of a park frequently visited as a kid in surburban New Zealand. The mix-media sound piece utilises field-recordings and synthesis techniques to narrate a sonic context of a site.</small> 
 <br>
 <br>
 <figure>
@@ -77,7 +77,7 @@
 <br>
 <br>
 <br>
-<small>2022_<b>Floating Basin</b>_is a sound essay broadcasted on Cashmere Radio as a part of a cumulative work on Diasporic Listening to Berlin soundscapes with artist Yara Mekawei. Floating <s>University</s>, is a public intervention site above the rainwater retention basin of the old Templehofer airport and an urban sanctuary for wildlife and microbials. Inspired by their resistance to uphold against urban redevelopment pressures and the societal activation of post-COVID lockdown, the essay situates upon this site as a departure point to question the meaning of change.</small> 
+<small>2022_<b>Floating basin</b>_is a sound essay broadcasted on Cashmere Radio as a part of a cumulative work on Diasporic Listening to Berlin soundscapes with artist Yara Mekawei. Floating <s>University</s>, is a public intervention site above the rainwater retention basin of the old Templehofer airport and an urban sanctuary for wildlife and microbials. Inspired by their resistance to uphold against urban redevelopment pressures and the societal activation of post-COVID lockdown, the essay situates upon this site as a departure point to question the meaning of change.</small> 
 <br>
 <br>
 <figure>
