--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <br>
 <br>
 <br>
-<small>2023_<b>Slowing walking down a suburban street</b>_is a sonic elaboration on the soundscape of a park frequently visited as a kid in surburban New Zealand. The mix-media sound piece utilises field-recordings and synthesis techniques to narrate the emotionalities of encounter, returning to the site as an adult.</small> 
+<small>2023_<b>Slowing walking down a suburban street</b>_is a sonic elaboration on the soundscape of a park frequently visited as a kid in suburban New Zealand. The mix-media sound piece utilises field-recordings and synthesis techniques to narrate the emotionalities of encounter, returning to the site as an adult.</small> 
 <br>
 <br>
 <figure>
