--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
 </head>
 <body>
 
-<small>a repository of sounds</small>
+<small>this site is constantly adapted for purposes of _applications and works to be situation-specific. Request more information: isulvontrapp@gmail.com</small>
 <br>
 <small>(@, isul kim</small>
 
 </body>
 </html>
-
 <br>
 <br>
-<p style="font-family:courier;color:red;font-size:90%;">Adapted for the Institute of Sonology</p>
+<br>
 <p style="font-family:courier;color:red;font-size:90%;">Application: Master of Music in Sonology<br>
 </p>
 <br>
