--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<small>this site is constantly adapted for purposes of _applications and works to be situation-specific. Request more information: isulvontrapp@gmail.com</small>
+<small>this site aims to be context-specific and is constantly adapted for the purpose of _applications. If you are revisiting and find some works missing, please be in touch: isulvontrapp@gmail.com</small>
 <br>
 <small>(@, isul kim</small>
 
@@ -14,14 +14,14 @@
 <br>
 <br>
 <br>
-<p style="font-family:courier;color:red;font-size:90%;">Application: Master of Music in Sonology<br>
+<p style="font-family:courier;color:red;font-size:90%;">Adapted for Royal Conservatoire The Hague<br> Master of Music in Sonology<br>
 </p>
 <br>
 <img src="anatomic buoyancies.jpg" alt="hydrophone"style="width:200px;height:250px;"><br>
 <small>_<i>the middle ear</i></small> 
 <br>
 <br>
-<small>2023_<b>Anatomic buoyancies</b>_is a collection of work arranged from material collected during Justin Bennett's field-recording workshop (The Hague). The works seek to explore the characteristics of each microphone through the choice of environment<sup>2</sup> they are placed inside. Each microphone embodies a unique shape and size, bandwidth, field of capture, and usability requirements that situates it in unique contexts. The (self-proclaimed) objective was to explore the characteristics of microphones presented to us, through imagining a suitable environment to capture. The following recordings were complied and composed during a week's excursion through the city, shifting sands, and a practise of non-listening.</small> 
+<small>2023_<b>Anatomic buoyancies</b>_is a collection of work arranged from material collected during Justin Bennett's field-recording workshop (The Hague). The works seek to explore the characteristics of each microphone through the choice of environment<sup>2</sup> they are placed inside. Each microphone embodies a unique shape and size, bandwidth, field of capture, and usability requirements that situates it in unique contexts. I thought it would be a good exercise of making acquaintence through imagining a suitable environment for each microphone to capture. The following recordings were complied and composed during a week's excursion through the city, shifting sands, and a practise of non-listening.</small> 
 </small> 
 <br>
 <br>
