--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 </head>
 <body>
 
-<small>this site aims to be context-specific and is constantly adapted for the purpose of _applications. If you are revisiting and find some works missing, please be in touch: isulvontrapp@gmail.com</small>
+<small>this site aims to be context-specific and is frequently adapted for the purpose of <i>_applications</i>. If you are revisiting and find some works missing, please be in touch: isulvontrapp@gmail.com</small>
 <br>
-<small>(@, isul kim</small>
 
 </body>
 </html>
