--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<small>this site aims to be context-specific and is frequently adapted for the purpose of <i>_applications</i>. If you are revisiting and find some works missing, please be in touch: isulvontrapp@gmail.com</small>
+<small>_this site aims to be context-specific and is frequently adapted for the purpose of applications. If you are revisiting and find some works missing, please be in touch: isulvontrapp@gmail.com</small>
 <br>
 
 </body>
