--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <small>_<i>the middle ear</i></small> 
 <br>
 <br>
-<small>2023_<b>Anatomic buoyancies</b>_is a collection of work arranged from material collected during Justin Bennett's field-recording workshop (The Hague). The works seek to explore the characteristics of each microphone through the choice of environment<sup>2</sup> they are placed inside. Each microphone embodies a unique shape and size, bandwidth, field of capture, and usability requirements that situates it in unique contexts. I thought it would be a good exercise of making acquaintence through imagining a suitable environment for each microphone to capture. The following recordings were complied and composed during a week's excursion through the city, shifting sands, and a practise of non-listening.</small> 
+<small>2023_<b>Anatomic buoyancies</b>_is a collection of work arranged from material collected during Justin Bennett's field-recording workshop (The Hague). The works seek to explore the characteristics of each microphone through the choice of environment<sup>2</sup> they are placed inside. Each microphone embodies a unique shape and size, bandwidth, field of capture, and usability requirements that situates it in unique contexts. I thought it would be a fun exercise to imagine a suitable environment for each microphone to capture. The collection is still in progress.</small> 
 </small> 
 <br>
 <br>
