--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <br>
 <br>
 <br>
-<small>2020_<b>Returning to zero time</b>_an immersive biofeedback environment was installed for the Reeperbahn Festival, in Hamburg Germany. Taking the anatomic womb as inspiration, audio and visual impulses are tuned to the average heart rate of visitors as an investigation on the social experience of synchronisation/solidarity during the first COVID lockdown. Commissioned for the artist collective Frank Nubala.</small><br> 
+<small>2020_<b>Returning to zero time</b>_an immersive biofeedback environment was installed for the Reeperbahn Festival, in Hamburg Germany. Taking the anatomic womb as inspiration, audio and visual impulses are tuned to the average heart rate of visitors as an investigation on the social experience of synchronisation during the first COVID lockdown. Commissioned for the artist collective Frank Nubala.</small><br> 
 <video width="600" height="400" controls>
   <source src="Returning to zero time.mp4" type="video/mp4">
 Your browser does not support the video tag.
